# tp_2022_web_cpp

./: CMakeLists.txt  README.md  build.sh  linters.sh  test.sh
.github/workflows/: ci.yml
include/: exceptions.h  matrix.h  set.cpp  set.h  set.hpp  set.impl
src/: main.cpp  matrix.cpp  set.cpp  test_set.cpp
tests/: CMakeLists.txt  test.cpp  test_set.cpp
